# oop2025_hw

./: copy.sh  output.txt  push.sh  push_to_Jenkins.sh  shapes.txt  update.sh
assignment0/: CMakeLists.txt
assignment0/src/: CMakeLists.txt
assignment0/test/: CMakeLists.txt  ut_hello.h  ut_main.cpp
assignment1/: CMakeLists.txt  README.md
assignment1/src/: CMakeLists.txt
assignment1/test/: CMakeLists.txt  ut_string.cpp
assignment2/src/: point_function.cpp
assignment2/tests/: ut_point_function.cpp
assignment3/: README.md
assignment3/src/: point.cpp  triangle.cpp  triangle.h
assignment3/tests/: ut_point.cpp  ut_triangle.cpp
assignment4/src/: book.cpp  book.h  ebook.cpp  library_item.cpp  library_item.h  library_management_system.cpp  library_management_system.h  reference_book.cpp  reference_book.h
assignment4/tests/: ut_book.cpp  ut_library.cpp  ut_library_item.cpp  ut_reference_book.cpp
assignment5/src/: book.cpp  ebook.cpp  library_item.h  library_management_system.cpp  library_management_system.h  reference_book.cpp
assignment5/tests/: ut_book.cpp  ut_ebook.cpp  ut_file_io.cpp  ut_library.cpp  ut_library_item.cpp  ut_reference_book.cpp
assignment6/: README.md
assignment6/src/: circle.cpp  convex_polygon.cpp  convex_polygon.h  geo_utils.cpp  geo_utils.h  main.cpp  triangle.cpp
assignment6/tests/: ut_circle.cpp  ut_convex_polygon.cpp  ut_geo_utils.cpp  ut_triangle.cpp
assignment7/src/: bank_account.cpp  bank_account.h  transaction.cpp  transaction.h  utils.h
assignment7/tests/: ut_bank_account.cpp  ut_bank_account_rule_of_three.cpp  ut_utils.cpp
assignment8/src/: shared_ptr.h
assignment8/tests/: ut_shared_ptr.cpp
assignment9/src/: book.cpp  library_item.cpp  library_management_system.cpp  library_management_system.h  reference_book.cpp
assignment9/tests/: ut_book.cpp  ut_library_item.cpp  ut_library_management_system.cpp  ut_reference_book.cpp
course_record/hello/: makefile
course_record/vector/: makefile
final/: README.md  push.sh
final/src/: box.cpp  box.h  cargo.h  exceptions.h  item.cpp  item.h
final/tests/: ut_box.cpp  ut_item.cpp
midterm1/: README.md  hand_writing_answer.txt
midterm1/src/: bank_account.cpp  bank_account.h
midterm2/: README.md
midterm2/src/: bank_account.h  (+2 more)
practice/: NOTE.md
src/: point.h  triangle.h
(+8 files in other folders)
